--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,32 +3,32 @@
     "browser": true,
     "node": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["plugin:prettier/recommended"],
   "globals": {
     "Promise": true,
     "global": true
   },
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2018,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
     }
   },
   "rules": {
-    "indent": ["error", 2, {"SwitchCase":1}],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "default-case": "error",
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "double"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
+    "linebreak-style": ["error", "unix"],
+    "semi": ["error", "always"],
+    "no-console": "error",
+    "no-undef": "error",
+    "no-var": "error",
+    "no-caller": "error",
+    "no-throw-literal": "error",
+    "no-unneeded-ternary": "error",
+    "prefer-const": "error",
+    "comma-spacing": ["error", { "before": false, "after": true }],
+    "comma-style": ["error", "last"],
+    "handle-callback-err": ["error", "^(err|error)$"]
   }
 }
