--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@runnerty/executor-check-online-service",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0",
   "description": "Runnerty module: Check Online Service Executor",
-  "author": "Coderty",
+  "author": "Runnerty Tech",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -27,13 +27,13 @@
     "lint": "eslint '**/*.js' && prettier --check '**'"
   },
   "dependencies": {
-    "@runnerty/module-core": "alpha",
-    "axios": "0.21.0"
+    "@runnerty/module-core": "3.0.1",
+    "axios": "0.21.1"
   },
   "devDependencies": {
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.0.1",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
   }
 }
