--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@runnerty/executor-check-online-service",
-  "version": "3.0.3",
+  "version": "3.1.0",
   "description": "Runnerty module: Check Online Service Executor",
   "author": "Runnerty Tech",
   "license": "MIT",
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "@runnerty/module-core": "~3.0.5",
-    "axios": "~0.21.1"
+    "axios": "~0.21.1",
+    "ms": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "^7.20.0",
